--- a/package.json
+++ b/package.json
@@ -7,13 +7,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
-    "sass": "^1.77.2"
+    "sass": "^1.77.2",
+    "esbuild": "^0.21.3"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds/js --public-path=assets --loader:.js=jsx --watch",
-    "build:css": "sass ./app/assets/stylesheets/application.sass.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
-  },
-  "devDependencies": {
-    "esbuild": "^0.21.3"
+    "build:css": "sass ./app/assets/stylesheets/application.sass.scss:./app/assets/builds/css/application.css --no-source-map --load-path=node_modules"
   }
 }
