--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.7.1",
+    "clsx": "^2.1.1",
+    "esbuild": "^0.21.3",
     "prettier": "^3.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "sass": "^1.77.2",
-    "esbuild": "^0.21.3",
     "typescript": "^5.4.5"
   },
   "scripts": {
