watch forever build js

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "typescript": "^5.4.5"
   },
   "scripts": {
-    "build": "esbuild app/javascript/application.js --bundle --sourcemap --outdir=app/assets/builds/js --public-path=assets --loader:.js=jsx --watch",
+    "build": "esbuild app/javascript/application.js --bundle --sourcemap --outdir=app/assets/builds/js --public-path=assets --loader:.js=jsx --watch --watch=forever",
     "build:css": "sass ./app/assets/stylesheets/application.sass.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
   }
 }
